--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8080
 test.hello=Hello2
 
 #增加mybatis数据库连接
-spring.datasource.url=jdbc:mysql://rm-0xi458a16565b8vyk4o.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=America/Chicago
-spring.datasource.username=wiki
+spring.datasource.url=jdbc:mysql://rm-0xi458a16565b8vyk4o.mysql.rds.aliyuncs.com/wikidev?characterEncoding=UTF8&autoReconnect=true&serverTimezone=America/Chicago
+spring.datasource.username=wikidev
 spring.datasource.password=Zrj@19970511
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
