--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,29 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!--mybatis generator 自动生成代码插件-->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>8.0.22</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<!--允许移动生成的文件-->
+					<verbose>true</verbose>
+					<!--允许自动覆盖文件-->
+					<overwrite>true</overwrite>
+					<configurationFile>
+						<!-- mybatis生成文件地址-->
+						src/main/resources/generator/generator-config.xml
+					</configurationFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
